src/main/java/com/example/solid/openClosed/example2/bad/SavingsAccount.java
package com.example.solid.openClosed.example2.bad;

import java.math.BigDecimal;

public class SavingsAccount {
    void deposit(BigDecimal value){
        //
    }

    void withdraw(BigDecimal value){
        //
    }
}
